--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,6 +26,6 @@ a {
   }
   body {
     color: white;
-    background-color: rgb(24 24 27 / var(--tw-bg-opacity));
+    background-color: #101315;
   }
 }
